--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 click==8.0.4
 Flask==2.0.3
 Flask-WTF==1.0.0
+greenlet==1.1.2
 hashids==1.3.1
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
 python-dotenv==0.19.2
+SQLAlchemy==1.4.31
 Werkzeug==2.0.3
+WTForm==1.0
 WTForms==3.0.1
