--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 click==8.0.4
+dnspython==2.2.0
+email-validator==1.1.3
 Flask==2.0.3
+flask-mongoengine==1.0.0
 Flask-WTF==1.0.0
 greenlet==1.1.2
 hashids==1.3.1
+idna==3.3
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
+mongoengine==0.24.0
+pymongo==4.0
 python-dotenv==0.19.2
 SQLAlchemy==1.4.31
 Werkzeug==2.0.3
