--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flask-mongoengine==1.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
+gunicorn==20.1.0
 hashids==1.3.1
 idna==3.3
 itsdangerous==2.1.0
